--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [ "James Barwick <jbarwick@me.com>",]
 license = "GPL-3.0-only"
 readme = "README.md"
 keywords = ["sck", "core", "aws", "cloud", "automation"]
-include = ["core_deployspec/_version.py"]
+include = ["core_deployspec/version.py"]
 
 [[tool.poetry.packages]]
 include = "core_deployspec"
@@ -35,9 +35,8 @@ name = "nexus"
 url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
 priority = "primary"
 
-[tool.poetry-dynamic-versioning.files."core_deployspec/_version.py"]
-persistent-substitution = true
-initial-content = "  \"\"\"\n  This is the version informatooin for this template\n  \"\"\"\n  __version__ = \"0.0.0\"\n  __version_tuple__ = (0, 0, 0)\n"
+[tool.poetry-dynamic-versioning.substitution]
+files = ["core_deployspec/__init__.py"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
