--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.poetry]
 name = "sck-core-deployspec"
-version = "0.0.5"
+version = "0.0.6"
 description = "Core Automation Deployspec Actions Compiler lambda function"
 authors = [ "James Barwick <jbarwick@me.com>",]
 license = "GPL-3.0-only"
@@ -26,9 +26,14 @@ boto3 = ">=1.35.93"
 botocore = ">=1.35.93"
 PyYAML = "^6.0.2"
 pyyaml-include = "^2.1"
-sck-core-framework = "^0.0.5"
-sck-core-db = "^0.0.5"
 
+[tool.poetry.dependencies.sck-core-db]
+path = "../sck-core-db"
+develop = true
+
+[tool.poetry.dependencies.sck-core-framework]
+path = "../sck-core-framework"
+develop = true
 [[tool.poetry.source]]
 name = "nexus"
 url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
