--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,16 +24,19 @@ style = "semver"
 python = "^3.12"
 boto3 = ">=1.35.93"
 botocore = ">=1.35.93"
-PyYAML = "^6.0.2"
-pyyaml-include = "^2.1"
 
 [tool.poetry.dependencies.sck-core-db]
 path = "../sck-core-db"
 develop = true
 
+[tool.poetry.dependencies.sck-core-execute]
+path = "../sck-core-execute"
+develop = true
+
 [tool.poetry.dependencies.sck-core-framework]
 path = "../sck-core-framework"
 develop = true
+
 [[tool.poetry.source]]
 name = "nexus"
 url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
@@ -47,6 +50,5 @@ pytest = "^8.3.3"
 flake8 = "^7.1.1"
 cfn-lint = "^1.22.3"
 black = "^24.10.0"
-types-pyyaml = "^6.0.12.20240917"
 boto3-stubs = ">=1.35.93"
 pytest-dotenv = "^0.5.2"
