--- a/tests/planspec.yaml
+++ b/tests/planspec.yaml
@@ -2,10 +2,11 @@
   type: create_change_set
   params:
     stack_name: my-first-stack
+    change_set_name: my-first-change-set
     template: template.yaml
     stack_parameters:
       build: 12345
     accounts:
-      - 123456789012
+      - '123456789012'
     regions:
       - us-east-1
