--- a/tests/deployspec.yaml
+++ b/tests/deployspec.yaml
@@ -1,23 +1,23 @@
 - label: test1-create-user
   type: aws.create_user
-  params:
+  spec:
     user_name: bob
     accounts: ["123456789012", "123456789013", "123456789014"]
     regions: ["us-east-1", "us-west-2"]
   depends_on: []
 - label: test1-delete-user
   type: aws.delete_user
-  params:
+  spec:
     user_name: bob
     accounts: ["123456789012", "123456789013", "123456789014"]
     regions: ["us-east-1", "us-west-2"]
   depends_on: test1-create-user
 - label: test1-create-stack
   type: create_stack
-  params:
+  spec:
     stack_name: "{{ Portfolio }}-stack-{{ App }}-{{ BranchShortName }}-{{ Build }}"
     template: template.yaml
-    stack_parameters:
+    parameters:
       build: 12345
       BucketName: "{{ ArtefactsBucketName }}"
       Portfolio: "{{ Portfolio }}"
